--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -2,9 +2,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+    align-items: center;
 }
   div.polaroid {
     width: 25%;
+    height:33%;
+    
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 100px;
@@ -23,5 +27,5 @@
 
 .image{
     height: 85%;
-    width: 55%;
+    width: 75%;
   }
