--- a/src/style/home-page-style.css
+++ b/src/style/home-page-style.css
@@ -2,7 +2,7 @@
     border-radius: 1.5%;
     font-size: 75%;
     color: rgb(255, 255, 255);
-    height: 950px;
+    height: 100vh;
 }
 .body-text{
     padding-top: 5%;
