--- a/src/style/resume-style.css
+++ b/src/style/resume-style.css
@@ -1,8 +1,8 @@
+
 .list-group-item{
     width: 75vw;
     text-align: left;
     background-color: #2B3035;
-
 }
 .list-group{
     margin-top: 3%;
@@ -11,4 +11,7 @@
 }
 #toggle-button{
     width: 15vw;
+}
+.resume-section{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
