--- a/src/style/about-me-style.css
+++ b/src/style/about-me-style.css
@@ -4,18 +4,48 @@
     height:100%;
     width:100%;
 }
-@media only screen and (max-width: 600px) {
+.contact-icon{
+    height: 40px;
+    width: 50px;
+}
+.contact-link{
+    margin-left: 4%;
+    margin-right: 15%;
+    color: white;
+}
+.headshot{
+    margin-left: 30px;
+    width: 350px;
+    height: 350px;
+    border-radius: 50%;
+    float: left;
+}
+@media only screen and (max-width: 700px) {
     .header-flexbox {
-        padding-left: 12%;
-        height: 15%;
-        width:1%;
-        margin-top: 10%;
-        margin-left: 25%;
-        margin-right: 25%;
-        display: flex;
-        margin-top: 3%;
-        align-items: center;
-        justify-content: center;
+        flex-direction: column;
+    }
+    .contact-icon{
+        height: 40px;
+        width: 40px;
+        margin-bottom: 7%;
+    }
+    .contact-link{
+        margin-right: auto;
+        margin-left: auto;
+        margin-bottom: 15%;
+    }
+    .headshot{
+        width: 300px;
+        height:300px;
+    }
+    .intro-flexbox{
+        flex-direction: column;
+    }
+    .sbu-image{
+        margin-bottom: 25%;
+    }
+    .footer-flexbox{
+        flex-direction: column;
     }
   }
 .title{
@@ -46,6 +76,10 @@
     justify-content: center;
     column-gap: 6%;
     font-size: larger;
+}
+.sbu-image{
+    width: 160px;
+    height: 160px;
 }
 .footer-flexbox{
     width: 85vw;
