--- a/src/style/home-page-style.css
+++ b/src/style/home-page-style.css
@@ -3,19 +3,26 @@
     font-size: 75%;
     color: rgb(255, 255, 255);
     height: 100vh;
+    background-image: url('../images/skyline.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover ;
+    background-position: center center;
 }
+
 .body-text{
-    padding-top: 5%;
-    padding-bottom: 5%;
-    height: 15%;
+    
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: rgb(0, 0, 0);    
+    padding-top: 15%;
+    height: 55%;
     width: 75vw;
     margin-left: auto;
     margin-right: auto;
-    font-size: 18pt;
+    font-size: 16pt;
+    font-weight: bolder;
 }
-.image{
-    vertical-align: middle;
-    padding-top: 5%;
-    width: 25%;
-    height: 25%;
+@media only screen and (max-width: 700px) {
+    .body-text{
+        font-size: 10pt;
+    }
 }
