--- a/src/style/resume-style.css
+++ b/src/style/resume-style.css
@@ -15,3 +15,12 @@
 .resume-section{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.title{
+    font-size: medium;
+    margin-top: 2%;
+    margin-bottom: 3%;
+    color: white;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
