--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -8,7 +8,7 @@
   div.polaroid {
     width: 25%;
     height:33%;
-    
+    padding-top: 1%;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 100px;
