--- a/src/style/about-me-style.css
+++ b/src/style/about-me-style.css
@@ -5,10 +5,11 @@
     width:100%;
 }
 .contact-icon{
-    height: 40px;
-    width: 50px;
+    height: 50px;
+    width: 60px;
 }
 .contact-link{
+    font-size: small;
     margin-left: 4%;
     margin-right: 15%;
     color: white;
@@ -25,6 +26,8 @@
         flex-direction: column;
     }
     .contact-icon{
+        margin-right: auto;
+        margin-left: auto;
         height: 40px;
         width: 40px;
         margin-bottom: 7%;
