--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -5,7 +5,17 @@
   justify-content: center;
     align-items: center;
 }
-  div.polaroid {
+@media only screen and (max-width: 700px) {
+  .flex{
+    flex-direction: column;
+  }
+  div.polaroid{
+    width: 65%;
+    padding-top: 3%;
+  }
+
+}
+  .polaroid {
     width: 25%;
     height:33%;
     padding-top: 1%;
