--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -8,6 +8,8 @@
 @media only screen and (max-width: 700px) {
   .flex{
     flex-direction: column;
+    align-items: center;
+    
   }
   div.polaroid{
     width: 65%;
@@ -23,8 +25,8 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 100px;
     display: absolute;
-    float:left;
-    margin-left: 5%;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   div.container {
