--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -3,7 +3,8 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-    align-items: center;
+  align-items: center;
+  column-gap: 3%;
 }
 @media only screen and (max-width: 700px) {
   .flex{
@@ -25,8 +26,6 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin-bottom: 100px;
     display: absolute;
-    margin-left: auto;
-    margin-right: auto;
   }
   
   div.container {
