--- a/src/style/photos-style.css
+++ b/src/style/photos-style.css
@@ -1,4 +1,13 @@
-.flex{
+.intro{
+  margin-bottom: 6%;
+  margin-top: 1%; 
+  margin-right: auto; 
+  margin-left: auto;
+  width: 75%;
+  color: white; 
+  font-size: 12pt;
+}
+  .flex{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -7,13 +16,17 @@
   column-gap: 3%;
 }
 @media only screen and (max-width: 700px) {
+  .intro{
+    margin-top: 3%;
+    margin-bottom: 9%;
+  }
   .flex{
     flex-direction: column;
     align-items: center;
-    
   }
   div.polaroid{
     width: 65%;
+    margin-top: 3%;
     padding-top: 3%;
   }
 
