--- a/src/style/resume-style.css
+++ b/src/style/resume-style.css
@@ -24,3 +24,9 @@
     margin-left: auto;
     margin-right: auto;
 }
+@media only screen and (max-width: 700px) {
+    .title{
+        margin-top: 3%;
+        margin-bottom: 9%;
+    }
+}
