--- a/src/style/about-me-style.css
+++ b/src/style/about-me-style.css
@@ -28,8 +28,8 @@
     float: left;
 }
 .intro-flexbox{
-    margin-top: 5%;
-    width: 95vw;
+    margin-top: 8%;
+    width: 90vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -37,8 +37,8 @@
     font-size: larger;
 }
 .sbu-image{
-    width: 160px;
-    height: 160px;
+    width: 100px;
+    height: 100px;
 }
 .title{
     font-size: x-large;
@@ -60,14 +60,14 @@
 }
 .footer-flexbox{
     width: 85vw;
-    margin-top: 4%;
+    margin-top: 7%;
     margin-bottom: 1%;
     font-size: 14pt;
     width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
-    column-gap: 6%;
+    column-gap: 4%;
 }
 @media only screen and (max-width: 700px) {
     .header-flexbox {
@@ -107,6 +107,7 @@
         height:300px;
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 4%;
     }
     .intro-flexbox{
         justify-content: center;
